--- a/main.css
+++ b/main.css
@@ -2218,6 +2218,7 @@ button.passwordArr {
 .accordion:hover,
 .accordion.is-open {
     box-shadow: inset -1px 0 0 var(--Grey200), inset 0 0px 0 var(--Grey200), inset 1px 0 0 var(--Grey200), inset 0 1px 0 var(--Grey200);
+    background-color: var(--Grey100);
 
     /*    
 
