--- a/main.css
+++ b/main.css
@@ -4,13 +4,99 @@ html {
     font-size: 16px;
     font-family: 'Lato', sans-serif;
     height: var(--height100);
-
-
 }
 
+/* ===== code copy to clipboard ====== */
+/* Style for the container of the code */
+pre {
+    height: 12em;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    /* To ensure the button doesn't overflow */
+    position: relative;
+    background: var(--Grey200);
+    /* A dark background for code readability */
+    color: var(--Grey700);
+    /* Light text for better contrast against dark background */
+    border-radius: 6px;
+    /* A subtle rounded corner */
+    overflow: hidden;
+    /* Ensure nothing spills out of our box */
+    font-size: clamp(0.68em, 0.78vw, 0.86em);
+    border: 1px solid var(--Grey300);
+}
+
+/* Style for the code */
+pre code {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    display: block;
+    /* To ensure the button doesn't interfere with code lines */
+    white-space: pre;
+    /* Ensure code's white space (like indentation) is respected */
+    height: 100%;
+
+    /* Full height of the parent */
+    overflow-y: auto;
+    /* Allow vertical scroll */
+    scrollbar-width: thin;
+    /* Makes the scrollbar slimmer */
+    scrollbar-color: var(--Grey700) var(--Grey300);
+    /* Scrollbar styling (color, in this case) */
+}
+
+/* Scrollbar styles for WebKit browsers */
+pre code::-webkit-scrollbar {
+    width: 8px;
+}
+
+pre code::-webkit-scrollbar-thumb {
+    background-color: var(--white);
+    border-radius: 4px;
+}
+
+pre code::-webkit-scrollbar-thumb:hover {
+    background-color: var(--colorTealDk);
+    border-radius: 4px;
+}
+
+pre code::-webkit-scrollbar-track {
+    background-color: var(--Grey500);
+}
+
+/* Style for the copy button */
+pre button {
+    position: absolute;
+    top: 8px;
+    right: 18px;
+    background-color: var(--Grey900);
+    /* Blue background color */
+    color: var(--white);
+    /* White text */
+    border: none;
+    /* No border */
+    border-radius: 3px;
+    /* A subtle rounded corner for the button */
+    padding: 5px 10px;
+    cursor: pointer;
+    /* The hand icon on hover, suggesting an action */
+    font-size: 12px;
+    transition: background-color 0.3s ease;
+    /* A fade transition effect on hover */
+}
+
+pre button:hover {
+    background-color: var(--colorTealDk);
+    /* A slightly darker blue for the hover effect */
+}
+
+/* ===== code copy to clipboard ====== */
 .help:hover {
     cursor: help;
 }
+
 .progress:hover {
     cursor: progress;
 }
