--- a/meal_planner/mpOnly.css
+++ b/meal_planner/mpOnly.css
@@ -1218,7 +1218,7 @@ a.nav-link:hover {
     background-color: #E2EDFD !important;
 }
 
-.colorBgGrey {
+.GreyBg200 {
     background-color: #F5F5F5;
 }
 
