--- a/main.css
+++ b/main.css
@@ -5698,7 +5698,7 @@ pre {
     overflow: hidden;
     /* To ensure the button doesn't overflow */
     position: relative;
-    background: var(--Grey200);
+    background: var(--Grey100);
     /* A dark background for code readability */
     color: var(--Grey700);
     /* Light text for better contrast against dark background */
@@ -5713,9 +5713,10 @@ pre {
 /* Style for the code */
 pre code {
     position: absolute;
-    top: 0;
+    top: 1;
     width: 100%;
     display: block;
+    padding:20px 0;
     /* To ensure the button doesn't interfere with code lines */
     white-space: pre;
     /* Ensure code's white space (like indentation) is respected */
@@ -5732,7 +5733,7 @@ pre code {
 
 /* Scrollbar styles for WebKit browsers */
 pre code::-webkit-scrollbar {
-    width: 8px;
+    width: 6px;
 }
 
 pre code::-webkit-scrollbar-thumb {
@@ -5752,8 +5753,8 @@ pre code::-webkit-scrollbar-track {
 /* Style for the copy button */
 pre button {
     position: absolute;
-    top: 8px;
-    right: 18px;
+    top: 10px;
+    right: 12px;
     background-color: var(--Grey900);
     /* Blue background color */
     color: var(--white);
@@ -5777,11 +5778,11 @@ pre button:hover {
 
 Pre .codeTiltle {
     position: absolute;
-    top: 8px;
-    left: 8px;
-    background: var(--Warm);
-    padding: 6px;
-    border-radius: 12px;
+    top: 0px;
+    left: 0px;
+    background: var(--Grey300);
+    padding: 15px;
+    width: 100%;
 }
 
 /* ===== code copy to clipboard ====== */
@@ -5794,10 +5795,10 @@ Pre .codeTiltle {
 
 .tab-button {
     font-size: 12px;
-    padding: 10px 15px;
+    padding: 8px 16px;
     cursor: pointer;
     border: none;
-    background-color: #f5f5f5;
+    background-color: var(--Grey100);
     border-bottom: 2px solid transparent;
     transition: background-color 0.3s, border-color 0.3s;
 }
@@ -5807,8 +5808,9 @@ Pre .codeTiltle {
 }
 
 .tab-button.active {
-    background-color: #fff;
-    border-bottom-color: #007bff;
+    background-color: var(--Grey100);
+
+    border-bottom-color: var(--Grey900);
 }
 
 .tab-content {
