--- a/main.css
+++ b/main.css
@@ -1505,9 +1505,6 @@ main>nav {
     padding-bottom: 16px;
     padding-right: 12px;
          */
-
-
-
     overflow-y: auto;
     height: fit-content;
     top: 50%;
@@ -2043,7 +2040,6 @@ padding: 0.8em 0em 0;
 .img__wrap {
     position: relative;
     width: 100%;
-
 }
 
 .img__description {
@@ -5792,13 +5788,16 @@ Pre .codeTiltle {
 /* ===== text copy to clipboard ====== */
 button.Clipboard {
     cursor: pointer;
-    font-size: 1.2em;
-    padding: 1.3rem 2.6rem;
+    font-size: 1em;
+    padding: 1em 2em;
     background: var(--colorTealLtest);
     border: 1px var(--colorTealLt);
     border-style: dashed;
-    color: #093824;
+    color: var(--Grey900);
     transition: 200ms;
+    text-align: left;
+    width: 100%;
+
 }
 
 button.Clipboard:hover {
@@ -5806,17 +5805,35 @@ button.Clipboard:hover {
     transform: translateY(-5px);
     box-shadow: 0px 30px 200px rgba(255, 255, 255, 0.7);
 }
+
 button.Clipboard:focus {
     outline: 6px solid var(--colorTealLtr);
 }
+
 button.Clipboard:active {
     transform: skew(-2deg) rotate(2deg);
 }
+
+.ClipboardBox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .copied {
     position: absolute;
-    top: 80vh;
-    margin: 2rem 0;
-    font-size: 1.7rem;
-    color: violet;
-  }
+    font-size: 1em;
+    color: var(--seer-purple--Orange);
+    right: 10px;  /* adjusted for some padding from the right */
+    bottom: 10px; /* adjusted for some padding from the bottom */
+}
+
+
+/* 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  
+  
+  */
 /* ===== text copy to clipboard ====== */
