--- a/main.css
+++ b/main.css
@@ -2741,6 +2741,13 @@ button.passwordArr {
 
 
 @media all and (max-width: 680px) {
+    body .iconXforModal {
+        height: 26px;
+        width: 26px;
+        border-radius: 10px;
+        margin: 0.2em;
+        padding: 0.1em;
+    }
     body .logo {
         padding: 0.5em 0.6em;
     }
@@ -4833,6 +4840,7 @@ img {
     background-color: rgba(255, 255, 255, 0.98);
     /* Black w/ opacity */
 }
+ 
 
 
 .modal-content {
@@ -4907,12 +4915,12 @@ img {
 }
 
 .iconXforModal {
-    height: 48px;
-    width: 48px;
+    height: 42px;
+    width: 42px;
     background-color: var(--Grey100);
-    border-radius: 32px;
+    border-radius: 18px;
     margin: 1em;
-    padding: 0.5em;
+    padding: 0.2em;
 }
 
 .iconXforModal:hover,
@@ -5788,8 +5796,8 @@ Pre .codeTiltle {
 /* ===== text copy to clipboard ====== */
 button.Clipboard {
     cursor: pointer;
-    font-size: 1em;
-    padding: 1em 2em;
+    font-size: clamp(0.8em, 1vw, 1.1em);
+    padding: 0 1em;
     background: var(--colorTealLtest);
     border: 1px var(--colorTealLt);
     border-style: dashed;
