--- a/main.css
+++ b/main.css
@@ -268,9 +268,11 @@ body {
 .Alet {
     color: var(--alert);
 }
+
 .AletLt {
     color: var(--alertLight);
 }
+
 /* ===== color vickywang.me ===== */
 /* ===== bg color vickywang.me ===== */
 .BgWarm {
@@ -297,18 +299,22 @@ body {
     background-color: var(--alert);
     color: var(--Grey200);
 }
+
 .BgAletLt {
     background-color: var(--alertLight);
     color: var(--Grey800);
 }
+
 .BgSuccess {
     background-color: var(--success);
     color: var(--Grey200);
 }
+
 .BgSuccessLt {
     background-color: var(--successLight);
     color: var(--Grey800);
 }
+
 /* ===== bg color vickywang.me ===== */
 /* color and shadow*/
 
@@ -4589,6 +4595,13 @@ body .flex-container.Mobile {
     background-color: var(--Grey100);
 }
 
+.iconDemo {
+    margin: 0.6em;
+    padding: 1.2em;
+    width: 2em;
+    height: auto;
+    cursor: pointer;
+}
 
 
 .chip {
@@ -4621,14 +4634,13 @@ body .flex-container.Mobile {
 }
 
 .iconXS {
-    width: 1.4rem;
+    width: 1.4em;
+    height: 1.4em;
     margin: 1px;
+
 }
 
-.iconCaseStudy {
-    width: 2rem;
-    margin: 1rem 0;
-}
+
 
 .iconS {
     width: 2.6rem;
@@ -5192,291 +5204,6 @@ body .carousel .carousel-item {
     top: 0;
 }
 
-/* MP Carousel */
-
-/* Photography */
-
-
-@keyframes carousel-animation {
-    0% {
-        opacity: 0.2;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
- 
-
-.button1 {
-    background-color: white;
-    color: black;
-    border: 2px solid #e7e7e7;
-    font-size: 22px;
-    padding: 8px 16px;
-}
-
-/* CSS */
-
-.btn1 {
-    position: relative;
-    display: inline-block;
-    overflow: hidden;
-    padding: 10px 15px;
-    font-size: 14px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-decoration: none;
-    color: #000;
-    transition: color 0.125s 0.75s;
-    margin-top: 6px;
-}
-
-.btn1:before,
-.btn1:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    transition: transform 1s linear, border-color 0s 0.5s linear;
-}
-
-.btn1:before {
-    border-left: 1px solid var(--Grey900);
-    border-right: 1px solid var(--Grey900);
-}
-
-.btn1:after {
-    border-top: 1px solid var(--Grey900);
-    border-bottom: 1px solid var(--Grey900);
-}
-
-.btn1:hover {
-    color: var(--AMBlue);
-}
-
-.btn1:hover:before,
-.btn1:hover:after {
-    border-color: var(--AMBlue);
-}
-
-.btn1:hover:before {
-    transform: skewY(180deg);
-}
-
-.btn1:hover:after {
-    transform: skewX(-180deg);
-}
-
-
-
-/* CSS */
-.button-35 {
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.5);
-    border: 1px solid var(--white);
-    border-radius: 12px;
-    box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
-    box-sizing: border-box;
-    color: var(--Grey900);
-    cursor: pointer;
-    display: inline-flex;
-    flex: 1 1 auto;
-    font-family: inherit;
-    font-size: 1rem;
-    font-weight: 500;
-    justify-content: center;
-    line-height: 1;
-    outline: none;
-    padding: 0.8em 1.4em;
-    text-align: center;
-    text-decoration: none;
-    transition: box-shadow .2s, -webkit-box-shadow .2s;
-    white-space: nowrap;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    margin-top: 0.4em;
-    margin: 12px;
-}
-
-
-.button-35.DS:hover {
-    box-shadow: var(--Grey800) 0 0 0 0.06em, transparent 0 0 0 0;
-    color: var(--Grey800);
-    background-color: rgba(255, 255, 255, 0.8);
-    transition: all 0.5s;
-
-
-}
-
-.button-35.APPOINTA:hover {
-    box-shadow: var(--APPOINTA-blue) 0 0 0 0.1em, transparent 0 0 0 0;
-    color: var(--APPOINTA-blue);
-    background-color: rgba(255, 255, 255, 0.8);
-    transition: all 0.5s;
-
-
-}
-
-
-.button-35.SEER:hover {
-    box-shadow: var(--seer-purple) 0 0 0 0.1em, transparent 0 0 0 0;
-    color: var(--seer-purple);
-    background-color: rgba(255, 255, 255, 0.8);
-}
-
-
-
-.button-35.WS:hover {
-    box-shadow: var(--WS-Blue) 0 0 0 0.1em, transparent 0 0 0 0;
-    color: var(--WS-Blue);
-    background-color: rgba(255, 255, 255, 0.8);
-}
-
-.button-35.GLORIFY:hover {
-    box-shadow: var(--GlorifyBlue) 0 0 0 0.1em, transparent 0 0 0 0;
-    color: var(--GlorifyBlue);
-    background-color: rgba(255, 255, 255, 0.8);
-
-}
-
-.buttonLanding {
-    border-radius: 0.6em;
-    align-self: center;
-    background-color: var(--white);
-    background-image: none;
-    background-position: 0 90%;
-    background-repeat: repeat no-repeat;
-    background-size: 4px 3px;
-    box-shadow: rgba(112, 112, 112, 0.2) 0px 7px 29px 0px;
-    box-sizing: border-box;
-    color: var(--Grey900);
-    cursor: pointer;
-    display: inline-block;
-    font-size: 1.2em;
-    font-family: inherit;
-    font-weight: 400;
-    line-height: 1.2em;
-    outline: none;
-    padding: 16px 28px;
-    text-decoration: none;
-    transition: all 235ms ease-in-out;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    margin: 12px;
-}
-
-.buttonLanding:hover {
-    box-shadow: rgba(63, 63, 63, 0.2) 0px 2px 8px 0px;
-    transform: translate3d(0, 2px, 0);
-}
-
-.buttonLanding:focus {
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 1px;
-}
-
-@media (min-width: 768px) {
-    .button-46 {
-        font-size: 20px;
-        min-width: 200px;
-        padding: 14px 16px;
-    }
-}
-
-/* CSS */
-.button-86 {
-    all: unset;
-    width: 100px;
-    height: 30px;
-    font-size: 16px;
-    background: transparent;
-    border: none;
-    position: relative;
-    color: #f0f0f0;
-    cursor: pointer;
-    z-index: 1;
-    padding: 10px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-}
-
-.button-86::after,
-.button-86::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: -99999;
-    transition: all .4s;
-}
-
-.button-86::before {
-    transform: translate(0%, 0%);
-    width: 100%;
-    height: 100%;
-    background: var(--Grey900);
-    border-radius: 10px;
-}
-
-.button-86::after {
-    transform: translate(10px, 10px);
-    width: 35px;
-    height: 35px;
-    background: #ffffff15;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border-radius: 50px;
-}
-
-.button-86:hover::before {
-    transform: translate(5%, 20%);
-    width: 110%;
-    height: 110%;
-}
-
-.button-86:hover::after {
-    border-radius: 10px;
-    transform: translate(0, 0);
-    width: 100%;
-    height: 100%;
-}
-
-.button-86:active::after {
-    transition: 0s;
-    transform: translate(0, 5%);
-}
-
-@media (min-width: 768px) {
-    .button-46 {
-        font-size: 20px;
-        min-width: 200px;
-        padding: 14px 16px;
-    }
-}
-
-button {
-    background-color: Transparent;
-    color: var(--Grey900);
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    display: block;
-    font-size: 46px;
-    cursor: pointer;
-    outline: none;
-    font-weight: light;
-    padding: 0 5%;
-}
 
 /* Photography */
 
@@ -5765,14 +5492,14 @@ button.small {
 /* ===== click icon copy to clipboard ====== */
 
 
-.ClipboardBox.iconOnly {
+.ClipboardBoxIconOnly {
     position: relative;
     width: 5em;
 
 
 }
 
-button.Clipboard.iconOnly {
+button.ClipboardIconOnly {
     width: 100%;
     cursor: pointer;
     font-size: clamp(0.8em, 1vw, 1.1em);
@@ -5785,24 +5512,24 @@ button.Clipboard.iconOnly {
 
 }
 
-button.Clipboard.iconOnly:hover {
-background-color: var(--Grey200);
-border-radius: 24px;
+button.ClipboardIconOnly:hover {
+    background-color: var(--Grey200);
+    border-radius: 24px;
 
 
 }
 
-button.Clipboard.iconOnly:focus {
+button.ClipboardIconOnly:focus {
     outline: 2px solid var(--Grey400);
 }
 
-button.Clipboard.iconOnly:active {
+button.ClipboardIconOnly:active {
     transform: skew(-2deg) rotate(2deg);
 }
 
 
-.copyText {
-    opacity: 0;
+.clickIconCopy {
+    opacity: 1;
     height: 0;
     /* To ensure the space taken up by the link is negligible */
     overflow: hidden;
@@ -5812,7 +5539,100 @@ button.Clipboard.iconOnly:active {
     padding: 0;
     /* Remove any default padding */
 }
+
+.copiedByClickIcon {
+    position: absolute;
+    font-size: 0.8em;
+    text-align: center;
+    font-family: inherit;
+    font-weight: 500;
+    padding: 0.4em 0.8em;
+    border-radius: 32px;
+    color: var(--white);
+    background: var(--Grey900);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 /* ===== click icon copy to clipboard ====== */
+/* ===== textbox copy to clipboard ====== */
+
+.ClickandCopy {
+    padding: 12px;
+    font-size: 18px;
+    color: var(--Grey700);
+}
+
+.copy-text {
+    position: relative;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.copy-text input.text {
+    width: 100%;
+    height: 100%;
+
+    font-size: 18px;
+
+    color: var(--Grey900);
+    border: none;
+    outline: none;
+    box-shadow: 0px 0px 0px var(--Grey100);
+}
+
+.copy-text button {
+    padding: 10px;
+    background: var(--GardenersHub);
+    color: var(--successLight);
+    font-size: 18px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+.copy-text button:active {
+    background: var(--success);
+}
+
+.copy-text button:before {
+    content: "Copied";
+    position: absolute;
+    top: -45px;
+    right: 0px;
+    background: var(--success);
+    padding: 8px 10px;
+    border-radius: 20px;
+    font-size: 15px;
+    display: none;
+}
+
+.copy-text button:after {
+    content: "";
+    position: absolute;
+    top: -20px;
+    right: 25px;
+    width: 10px;
+    height: 10px;
+    background: var(--success);
+    transform: rotate(45deg);
+    display: none;
+}
+
+.copy-text.active button:before,
+.copy-text.active button:after {
+    display: block;
+}
+
+
+
+/* ===== textbox copy to clipboard ====== */
 
 /* ===== text copy to clipboard ====== */
 button.Clipboard.clickTxt {
@@ -5850,17 +5670,229 @@ button.Clipboard.clickTxt:active {
 
 .copied {
     position: absolute;
-    font-size: 1em;
-    color: var(--GlorifyGreen);
-    bottom: -30px;
+    font-size: 0.8em;
     text-align: center;
+    font-family: inherit;
+    font-weight: 500;
+    padding: 0.4em 0.8em;
+    border-radius: 32px;
+    color: var(--white);
+    background: var(--Grey900);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  
-  
   */
 /* ===== text copy to clipboard ====== */
+
+
+/* ===== button ====== */
+.button-35 {
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid var(--white);
+    border-radius: 12px;
+    box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
+    box-sizing: border-box;
+    color: var(--Grey900);
+    cursor: pointer;
+    display: inline-flex;
+    flex: 1 1 auto;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 500;
+    justify-content: center;
+    line-height: 1;
+    outline: none;
+    padding: 0.8em 1.4em;
+    text-align: center;
+    text-decoration: none;
+    transition: box-shadow .2s, -webkit-box-shadow .2s;
+    white-space: nowrap;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin-top: 0.4em;
+    margin: 12px;
+}
+
+
+.button-35.DS:hover {
+    box-shadow: var(--Grey800) 0 0 0 0.06em, transparent 0 0 0 0;
+    color: var(--Grey800);
+    background-color: rgba(255, 255, 255, 0.8);
+    transition: all 0.5s;
+
+
+}
+
+.button-35.APPOINTA:hover {
+    box-shadow: var(--APPOINTA-blue) 0 0 0 0.1em, transparent 0 0 0 0;
+    color: var(--APPOINTA-blue);
+    background-color: rgba(255, 255, 255, 0.8);
+    transition: all 0.5s;
+
+
+}
+
+
+.button-35.SEER:hover {
+    box-shadow: var(--seer-purple) 0 0 0 0.1em, transparent 0 0 0 0;
+    color: var(--seer-purple);
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+
+
+.button-35.WS:hover {
+    box-shadow: var(--WS-Blue) 0 0 0 0.1em, transparent 0 0 0 0;
+    color: var(--WS-Blue);
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.button-35.GLORIFY:hover {
+    box-shadow: var(--GlorifyBlue) 0 0 0 0.1em, transparent 0 0 0 0;
+    color: var(--GlorifyBlue);
+    background-color: rgba(255, 255, 255, 0.8);
+
+}
+
+.buttonLanding {
+    border-radius: 0.6em;
+    align-self: center;
+    background-color: var(--white);
+    background-image: none;
+    background-position: 0 90%;
+    background-repeat: repeat no-repeat;
+    background-size: 4px 3px;
+    box-shadow: rgba(112, 112, 112, 0.2) 0px 7px 29px 0px;
+    box-sizing: border-box;
+    color: var(--Grey900);
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.2em;
+    font-family: inherit;
+    font-weight: 400;
+    line-height: 1.2em;
+    outline: none;
+    padding: 16px 28px;
+    text-decoration: none;
+    transition: all 235ms ease-in-out;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin: 12px;
+}
+
+.buttonLanding:hover {
+    box-shadow: rgba(63, 63, 63, 0.2) 0px 2px 8px 0px;
+    transform: translate3d(0, 2px, 0);
+}
+
+.buttonLanding:focus {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 1px;
+}
+
+@media (min-width: 768px) {
+    .button-46 {
+        font-size: 20px;
+        min-width: 200px;
+        padding: 14px 16px;
+    }
+}
+
+.button-86 {
+    all: unset;
+    width: 100px;
+    height: 30px;
+    font-size: 16px;
+    background: transparent;
+    border: none;
+    position: relative;
+    color: #f0f0f0;
+    cursor: pointer;
+    z-index: 1;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-86::after,
+.button-86::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: -99999;
+    transition: all .4s;
+}
+
+.button-86::before {
+    transform: translate(0%, 0%);
+    width: 100%;
+    height: 100%;
+    background: var(--Grey900);
+    border-radius: 10px;
+}
+
+.button-86::after {
+    transform: translate(10px, 10px);
+    width: 35px;
+    height: 35px;
+    background: #ffffff15;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 50px;
+}
+
+.button-86:hover::before {
+    transform: translate(5%, 20%);
+    width: 110%;
+    height: 110%;
+}
+
+.button-86:hover::after {
+    border-radius: 10px;
+    transform: translate(0, 0);
+    width: 100%;
+    height: 100%;
+}
+
+.button-86:active::after {
+    transition: 0s;
+    transform: translate(0, 5%);
+}
+
+@media (min-width: 768px) {
+    .button-46 {
+        font-size: 20px;
+        min-width: 200px;
+        padding: 14px 16px;
+    }
+}
+
+button {
+    background-color: Transparent;
+    color: var(--Grey900);
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 46px;
+    cursor: pointer;
+    outline: none;
+    font-weight: light;
+    padding: 0 5%;
+}
+
+/* ===== button ====== */
